--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,11 @@
 
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Google -->
+    <script src="https://apis.google.com/js/platform.js"></script>
+    <meta name="google-signin-client_id" content="559251770212-jg0e7eaj7rc6omlk7g6ol41jhsba3vsn.apps.googleusercontent.com">
+
+
 </head>
 
 <body class="fix-header card-no-border fix-sidebar">
